Fixed JDK 21 dependency in getLastMessage()